@@ -16,5 +16,11 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">template_form</field>
         </record>
 
+        <record model="ir.ui.view" id="template_view_tree">
+            <field name="model">product.template</field>
+            <field name="inherit" ref="product.template_view_tree"/>
+            <field name="name">template_tree</field>
+        </record>
+
     </data>
 </tryton>
